data/derived/comb/progs/unify/prog2644.ml.out
Characters 145-196:
  | _ -> ((c + x' + x'') / 10), ((c + x' + x'') mod 10) :: s
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
